@@ -7,7 +7,7 @@
  * Copyright (c) 2009-2013,
  * Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
  *
- * Copyright (c) 2009-2016, 2019,
+ * Copyright (c) 2009-2016, 2019-2020,
  * Technische Universitaet Dresden, Germany
  *
  * Copyright (c) 2009-2013,
@@ -240,8 +240,10 @@ SCOREP_ThreadForkJoin_TeamBegin( SCOREP_ParadigmType                 paradigm,
                                                  SCOREP_CPU_LOCATION_PHASE_MGMT );
     }
 
+    uint64_t tid = SCOREP_Thread_GetOSId();
+
     SCOREP_CALL_SUBSTRATE( ThreadForkJoinTeamBegin, THREAD_FORK_JOIN_TEAM_BEGIN,
-                           ( current_location, timestamp, paradigm, team ) );
+                           ( current_location, timestamp, paradigm, team, tid ) );
 
     /* Call subsystems on location activation, the master thread transits from
      * the PAUSE phase */
